--- a/thesis.bib
+++ b/thesis.bib
@@ -3917,3 +3917,16 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {A New Version of the Insertion Particle Method for Determining the Chemical Potential by Monte Carlo Simulation},
 	journal = {Molecular Simulation}
 }
+@article{Kumar_1994,
+	doi = {10.1021/ie00030a021},
+	url = {https://doi.org/10.1021%2Fie00030a021},
+	year = 1994,
+	month = {jun},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {33},
+	number = {6},
+	pages = {1600--1605},
+	author = {Ravi Kumar},
+	title = {Pressure Swing Adsorption Process: Performance Optimum and Adsorbent Selection},
+	journal = {Ind. Eng. Chem. Res.}
+}
