--- a/1-screening.tex
+++ b/1-screening.tex
@@ -291,8 +291,8 @@ In this section, I will show how the above-mentioned screening methodologies can
 
 The industrial interest for noble gases lies first in the many applications attached to them. For instance, xenon has multiple applications in the medical (e.g.\ anesthesia, painkiller, imaging),\autocite{cullen1951anesthetic, holstrater2011intranasal,Mammarappallil_2019} aeronautical\autocite{Patterson_2002,Coxhill_2005}, lithographic\autocite{Abramov_2018}, microelectronic\autocite{Chang_1995} or lighting sectors,\autocite{Jarman_1974,Tanaka_2019} just to cite a few. To meet the demand for these noble gases, one should consider all available sources, the most obvious one being the air we breathe. Xenon and krypton have both very low atmospheric concentrations; out of a thousand liters of air, we would extract at most one tenth of a milliliter of xenon and one of krypton.\autocite{kerry2007industrial} Nevertheless, direct extraction from the air remains the main production mean for xenon and krypton along with chemical plant off-gases that contains a higher concentration of inert gas (e.g., amonia purge gas). In these cases, the industry more commonly uses cryogenic distillation to extract xenon and krypton, which requires a compression and cooling of the gas mixture at very low temperatures. The separation process can be broken down into three steps: first the condensation of all gas with a boiling point higher than the oxygen, then the purification of oxygen resulting in a 20-80 xenon/krypton mixture, and finally the separation of xenon from krypton. In 1997, several cases of explosion of separation units were caused by the reaction of non-filtered dangerous hydrocarbons with purified liquid oxygen produced in the second step of this long process.\autocite{distill_accident,distill_accident2} The extreme chemical and physical conditions required for cryogenic distillation support the need for less energy-intensive and safer alternatives. 
 
-\setlength{\extrarowheight}{0.1cm}
 \begin{table}[ht]
+\setlength{\extrarowheight}{1pt}
 \centering
 \begin{tabular}{|l|c|}
   \hline
