--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -561,7 +561,7 @@ Furthermore, the scatterplot of $k\e{H}$ and $k\e{S}$ (shown on the Figure~\ref{
 \begin{table}[hb]
   \centering
   \small
-    \renewcommand{\arraystretch}{1.1}
+  \setlength{\extrarowheight}{1pt}
     \begin{tabular*}{0.8\textwidth}{@{\extracolsep{\fill}}|lr|rrrrr|rr|}
       \hline
         CSD Refcode & Ref. & $s\e{0}$ &  $s\e{1}$  &  $s\e{1}/s\e{0}$ &  $k\e{H}$ &  $k\e{S}$ & D$_i$ & D$_f$ \\
@@ -590,7 +590,7 @@ In this section, I go over some of the most selective materials, as identified a
 \begin{table*}[hb]
   \centering
   \fontsize{8.5}{10.5}\selectfont
-    \renewcommand{\arraystretch}{1.5}
+  \setlength{\extrarowheight}{1pt}
     \begin{tabular}{|lr|rrrrr|rrrrr|}
     \hline
           CSD Refcode & Ref. &  $s\e{0}$ &  $K\ex{Xe}$ &  $K\ex{Kr}$ &  $\Delta\e{ads}H\ex{Xe}\e{0}$ &  $\Delta\e{ads}H\ex{Kr}\e{0}$  &  $s\e{1}$ &  $q\ex{Xe}\e{1}$ &  $q\ex{Kr}\e{1}$ &  $\Delta\e{ads}H\ex{Xe}\e{1}$ &  $\Delta\e{ads}H\ex{Xe}\e{1}$ \\
