--- a/thesis.bib
+++ b/thesis.bib
@@ -3930,3 +3930,39 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {Pressure Swing Adsorption Process: Performance Optimum and Adsorbent Selection},
 	journal = {Ind. Eng. Chem. Res.}
 }
+@article{manz2010chemically,
+  title={Chemically meaningful atomic charges that reproduce the electrostatic potential in periodic and nonperiodic materials},
+  author={Manz, Thomas A and Sholl, David S},
+  journal={Journal of Chemical Theory and Computation},
+  volume={6},
+  number={8},
+  pages={2455--2468},
+  year={2010},
+  publisher={ACS Publications}
+}
+@article{Perdew_1996,
+	doi = {10.1103/physrevlett.77.3865},
+	url = {https://doi.org/10.1103%2Fphysrevlett.77.3865},
+	year = 1996,
+	month = {oct},
+	publisher = {American Physical Society ({APS})},
+	volume = {77},
+	number = {18},
+	pages = {3865--3868},
+	author = {John P. Perdew and Kieron Burke and Matthias Ernzerhof},
+	title = {Generalized Gradient Approximation Made Simple},
+	journal = {Phys. Rev. Lett.}
+}
+@article{Grimme_2010,
+	doi = {10.1063/1.3382344},
+	url = {https://doi.org/10.1063%2F1.3382344},
+	year = 2010,
+	month = {apr},
+	publisher = {{AIP} Publishing},
+	volume = {132},
+	number = {15},
+	pages = {154104},
+	author = {Stefan Grimme and Jens Antony and Stephan Ehrlich and Helge Krieg},
+	title = {A consistent and accurate \emph{ab initio} parametrization of density functional dispersion correction ({DFT}-D) for the 94 elements H-Pu},
+	journal = {The Journal of Chemical Physics}
+}
