change png to jpg

--- a/1-screening.tex
+++ b/1-screening.tex
@@ -24,13 +24,13 @@ The process of sticking particles or molecules on a surface is called adsorption
   \centering
   \begin{subfigure}[b]{0.45\textwidth}
     \centering
-    \includegraphics[height=0.7\textwidth]{figures/1-screening/isotherm_298K_xenon_UFF_KAXQIL_clean.png}
+    \includegraphics[height=0.7\textwidth]{figures/1-screening/isotherm_298K_xenon_UFF_KAXQIL_clean.jpg}
     \caption{Xe monocomponent isotherm}
   \end{subfigure}
   \hfill
   \begin{subfigure}[b]{0.45\textwidth}
     \centering
-    \includegraphics[height=0.7\textwidth]{figures/1-screening/isotherm_298K_xenon_UFF_KAXQIL_clean.png}
+    \includegraphics[height=0.7\textwidth]{figures/1-screening/isotherm_298K_xenon_UFF_KAXQIL_clean.jpg}
     \caption{Xe/Kr mixture isotherm}
   \end{subfigure}
   \caption{Illustration of adsorption isotherms calculated by GCMC calculations. \todo{change figure}}\label{isotherm}
