--- a/thesis.bib
+++ b/thesis.bib
@@ -94,6 +94,19 @@
 	title = {Separation of rare gases and chiral molecules by selective binding in porous organic cages},
 	journal = {Nature Mater.}
 }
+@article{Chen_2015,
+	doi = {10.1021/jacs.5b02556},
+	url = {https://doi.org/10.1021%2Fjacs.5b02556},
+	year = 2015,
+	month = {may},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {137},
+	number = {22},
+	pages = {7007--7010},
+	author = {Xianyin Chen and Anna M. Plonka and Debasis Banerjee and Rajamani Krishna and Herbert T. Schaef and Sanjit Ghose and Praveen K. Thallapally and John B. Parise},
+	title = {Direct Observation of Xe and Kr Adsorption in a Xe-Selective Microporous Metal{\textendash}Organic Framework},
+	journal = {J. Am. Chem. Soc.}
+}
 @article{Lyu_2020,
 	doi = {10.1016/j.chempr.2020.08.008},
 	url = {https://doi.org/10.1016/j.chempr.2020.08.008},
@@ -3965,4 +3978,30 @@ URL = {https://doi.org/10.1137/0216006},
 	author = {Stefan Grimme and Jens Antony and Stephan Ehrlich and Helge Krieg},
 	title = {A consistent and accurate \emph{ab initio} parametrization of density functional dispersion correction ({DFT}-D) for the 94 elements H-Pu},
 	journal = {The Journal of Chemical Physics}
+}
+@article{Olney1997,
+  doi = {10.1016/s0301-0104(97)00145-6},
+  url = {https://doi.org/10.1016/s0301-0104(97)00145-6},
+  year = {1997},
+  month = oct,
+  publisher = {Elsevier {BV}},
+  volume = {223},
+  number = {1},
+  pages = {59--98},
+  author = {Terry N. Olney and N.M. Cann and Glyn Cooper and C.E. Brion},
+  title = {Absolute scale determination for photoabsorption spectra and the calculation of molecular properties using dipole sum-rules},
+  journal = {Chemical Physics}
+}
+@article{Cessford_2012,
+	doi = {10.1021/ie202219w},
+	url = {https://doi.org/10.1021%2Fie202219w},
+	year = 2012,
+	month = {mar},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {51},
+	number = {13},
+	pages = {4911--4921},
+	author = {Naomi F. Cessford and Nigel A. Seaton and Tina Düren},
+	title = {Evaluation of Ideal Adsorbed Solution Theory as a Tool for the Design of Metal{\textendash}Organic Framework Materials},
+	journal = {Ind. Eng. Chem. Res.}
 }
