--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -197,7 +197,7 @@ The validity of the initial algorithm is based on the assumption that the adsorp
 
 \begin{figure}[ht]
 \centering
-  \includegraphics[width=0.7\linewidth]{figures/3-fastsim/sphere_size_optimisation.png}
+  \includegraphics[width=0.7\linewidth]{figures/3-fastsim/sphere_size_optimisation.jpg}
   \caption{Influence of the sampling sphere radius $R_{\lambda}$ on the average CPU time required for a simulation of 100k sampling points and the RMSE, compared to the reference adsorption enthalpy. The averaging is done only on the structures with the largest cavity diameter (LCD\e{CCDC}) higher than \SI{3.7}{\angstrom}.}\label{fgr:radius}
 \end{figure}
 
@@ -211,7 +211,7 @@ As shown above, the RAESS algorithm has better accuracy than Voronoi sampling, b
 
 \begin{figure}[ht]
 \centering
-  \includegraphics[width=\linewidth]{figures/3-fastsim/rejection_sampling_sphere.png}
+  \includegraphics[width=\linewidth]{figures/3-fastsim/rejection_sampling_sphere.jpg}
   \caption{Simplified representation of the principle of rejection condition and the concept of sampling sphere inside 2D channels of a nanoporous material.}\label{fgr:feature}
 \end{figure}
 
@@ -221,7 +221,7 @@ This rejection condition is expected to speed up the calculation, since the ener
 
 \begin{figure}[ht]
 \centering
-  \includegraphics[width=0.7\linewidth]{figures/3-fastsim/rejection_coeff_optimisation.png}
+  \includegraphics[width=0.7\linewidth]{figures/3-fastsim/rejection_coeff_optimisation.jpg}
   \caption{Influence of the rejection coefficient $\mu$ on the average CPU time required for a simulation of 100k sampling points and the RMSE compared to the reference adsorption enthalpy. The averaging is done only on the structures with the largest cavity diameter (LCD\e{CCDC}) superior to \SI{3.7}{\angstrom}. }\label{fgr:rejection}
 \end{figure}
 
@@ -264,7 +264,7 @@ Finally, the values of the parameters optimized in this work might need adjustme
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=\linewidth]{figures/3-fastsim/methods_comparison.png}
+    \includegraphics[width=\linewidth]{figures/3-fastsim/methods_comparison.jpg}
     \caption{Comparison of the RMSE to the reference Widom insertion and the average computation time for different types of enthalpy calculation methods. The surface sampling calculation was all done with 2k sampling points on each sphere and the Widom simulations were done using 12k cycles. These values correspond to the value at the convergence identified using Figure~\ref{fgr:convergence}. }\label{fgr:sumup}
   \end{figure}
 
