--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -26,6 +26,12 @@ Lionel Zoubritzky
 
 \subsection{Connection to the breakthrough experiments}
 
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=0.4\textwidth]{figures/6-perspectives/sbmof_breakthrough.jpg}
+  \caption{ Experimental breakthrough curves in SBMOF-1 for a gas mixture with 400 ppm Xe and 40 ppm Kr balanced with dry air. }\label{fgr:sbmof_breakthrough}
+\end{figure}
+
 Diffusion coefficients 
 
 RUPTURA, breakthrough curve
@@ -97,7 +103,7 @@ This approach does not give a complete picture of the flexibility effect on the 
 
 According to original paper on SBMOF-1,\autocite{Banerjee_2016} the theoretical selectivity calculated by UFF is around $70.6$. However, the experimental selectivity is much lower, around $16$. To solve this mystery, Witman et al. used a snapshot-based method to evaluate the effect of selectivity. The intrinsic flexibility lowers the selectivity, which goes in the right direction to explain the difference of selectivity, but it does not seem to capture the whole picture. 
 
-I think that the missing effect that could explain the discrepancies observed is the deformation induced by the loading of adsorbate inside the material. For instance, experimentally a structure is never empty when we resolve it by X-ray, and molecules are actually loaded inside. As shown on the Table~\ref{table:sbmof}, the structure that was originally published for its good \ce{CO2}/\ce{N2} selectivity\autocite{Yeh2012,Banerjee2012} was also tested for water adsorption, and two different structures emerged from this study: KAXQOR and KAXQIL. The first one is loaded by either air or \ce{CO2}, and the structure does not seem to be stretched as much (low LCD values around \SI{4.5}{\angstrom}). The second one, on the other hand is loaded by water that forms big clusters inside the pores and therefore stretches the pore size toward higher values (high LCD values around \SI{5.0}{\angstrom}). If we look at later studies, depending on the adsorbate (hexane, water, butane, krypton or xenon), the LCD and PLD values change in the first order according to the size of the adsorbate. There are of course other effects, like the clustering we mentioned for water, but also less expected effects such as the orientation of the adsorbate inside the structure. 
+I think that the missing effect that could explain the discrepancies observed is the deformation induced by the loading of adsorbate inside the material. For instance, experimentally a structure is never empty when we resolve it by X-ray, and molecules are actually loaded inside. As shown on the Table~\ref{table:sbmof}, the structure that was originally published for its good \ce{CO2}/\ce{N2} selectivity\autocite{Yeh2012,Banerjee2012} was also tested for water adsorption, and two different structures emerged from this study: KAXQOR and KAXQIL. The first one is loaded by either air or \ce{CO2}, and the structure does not seem to be stretched as much (low LCD values around \SI{4.5}{\angstrom}). The second one, on the other hand is loaded by water that forms big clusters inside the pores and therefore stretches the pore size toward higher values (high LCD values around \SI{5.0}{\angstrom}). If we look at the structures resolved in the Nature Communications study\autocite{Banerjee_2016}, depending on the adsorbate (hexane, water, butane, krypton or xenon), the LCD and PLD values change in the first order according to the size of the adsorbate as illustrated on the Figure~\ref{fgr:stretch}. There are of course other effects, like the clustering we mentioned for water, but also less expected effects such as the orientation of the adsorbate inside the structure. 
 
 \begin{table}[t]
 \centering
@@ -133,19 +139,19 @@ As shown on the Figure~\ref{fgr:ads_config}, the orientation of the hexane molec
   \centering
   \begin{subfigure}[b]{0.45\textwidth}
     \centering
-    \includegraphics[height=0.6\textwidth]{figures/6-perspectives/QUXRIM.png}
+    \includegraphics[height=0.6\textwidth]{figures/6-perspectives/QUXRIM.jpg}
     \caption{QUXRIM}\label{fgr:QUXRIM}
   \end{subfigure}
   \hfill
   \begin{subfigure}[b]{0.45\textwidth}
     \centering
-    \includegraphics[height=0.6\textwidth]{figures/6-perspectives/QUXRUY.png}
+    \includegraphics[height=0.6\textwidth]{figures/6-perspectives/QUXRUY.jpg}
     \caption{QUXRUY}\label{fgr:QUXRUY}
   \end{subfigure}
-  \caption{ An illustration of the effect of the orientation of hexane inside a SBMOF-1-like material. In QUXRIM (a), the carbon atoms are oriented toward the S atoms, whereas in QUXRUY (b) they are oriented toward the Ca atoms. This difference in the orientation could explain the different structural properties of the materials reported on the Table~\ref{table:sbmof}.}\label{fgr:ads_config}
+  \caption{ An illustration of the effect of the orientation of hexane inside a SBMOF-1-like material. In QUXRIM (a), the carbon atoms are oriented toward the S atoms, whereas in QUXRUY (b) they are oriented toward the Ca atoms. This difference in the orientation could explain the different structural properties of the materials reported on the Table~\ref{table:sbmof}. Color code: brown for C, white for H, red for O, cyan for Ca, yellow for S. The structure visualizations are generated using the VESTA software.\autocite{VESTA}}\label{fgr:ads_config}
 \end{figure}
 
-Now that I characterized the adsorbate effect on a few example-configurations, we can better understand the thought process that lead to the identification of KAXQIL as a candidate for Xe/Kr separation. The KAXQIL structure is actually representing the material loaded by water with large pores which enables a good interaction with a large molecule like xenon. For this reason, it was identified as a top selective material. However, when it was experimentally tested for low pressure adsorption using the Henry constant, it is most likely that the pores are not stretched, which gave lower Henry constants than expected. The structures UQEFAZ or KAXQOR seem to a better description of this low-pressure case since the experimental selectivity values are much more consistent with their theoretical selectivity values. 
+Now that I characterized the adsorbate effect on a few example-configurations, we can better understand the thought process that lead to the identification of KAXQIL as a candidate for Xe/Kr separation. The KAXQIL structure is actually representing the material loaded by water with large pores which enables a good interaction with a large molecule like xenon. For this reason, it was identified as a top selective material. However, when it was experimentally tested for low pressure adsorption using the Henry constant, it is most likely that the pores are not stretched, which implies lower Henry constants than expected. The structures UQEFAZ or KAXQOR seem to a better description of this low-pressure case since the experimental selectivity values are much more consistent with their theoretical selectivity values. 
 
 To confirm this hypothesis, we would need to measure a high-loading Xe/Kr binary mixture adsorption uptake. If xenon is highly represented in the adsorbent material, then the structure would we much more favorable to the xenon adsorption, hence increasing the selectivity value closer to the theoretically predicted one. This also highlights a composition effect, if the initial mixture has a low xenon content, the structure would most likely have narrower pores, which could decrease the selectivity. By changing the composition of the binary mixture, this effect could also be measured experimentally, if the initial hypothesis on the adsorbate-induced flexibility is correct.
 
@@ -154,39 +160,81 @@ This method could be used on other materials by screening for materials with a s
 
 \subsubsection{Diffusion in a flexible environment}
 
-D'autre part, le cas de UQEFED, qui représente la structure de SBMOF-1 adsorbé par du xénon déterminée par Banerjee \emph{et al.},\autocite{Banerjee_2016} allie une forte sélectivité (63) mais avec une très faible diffusivité (1$\times$10\ex{-11} \si{\square\cm\per\s}). Bien que la sélectivité thermodynamique est très bonne, cet équilibre ne peut être atteint que très lentement car les molécules de xénon n'ont pas le temps de se déplacer dans la structure. Ainsi, ce blocage cinétique pourrait également expliquer que l'expérience note des valeurs de sélectivités en décalage avec la théorie. En effet, rien ne nous dit que l'équilibre est atteint lors du tracé des isothermes expérimentales. Une pénétration lente du xénon à l'intérieur du matériau donnerait des quantités de xénon adsorbées plus faibles que prévu par la thermodynamique, ce qui mettrait en défaut les simulations théoriques. 
+The transport can also be modulated by the adsorbate-induced flexibility of SBMOF-1. Depending on the structural configuration of the material, the diffusion coefficient is limiting only for some configurations of the material: it is equal to $3\times10^{-8}$~\si{\square\cm\per\s} for KAXQIL and $1\times10^{-11}$~\si{\square\cm\per\s} for UQEFED (Table~\ref{table:sbmof}). This lower diffusion coefficient can be simply explained by the change in PLD value induced by the stretching illustrated on the Figure~\ref{fgr:stretch}. For a material mostly loaded by krypton molecules, the diffusion coeffcient of xenon is much higher ($5\times10^{-6}$~\si{\square\cm\per\s}), although it not free diffusion, it can at least be considered as an unobstructed diffusion inside the material. 
 
-Fort de ces deux constats, il est plus probable que le matériau SBMOF-1 réel ait une certaine flexibilité permettant le déplacement du xénon quand les sites ne sont pas déjà occupés par du xénon. Mais lorsqu'il y a un xénon qui occupe le site, les canaux deviennent plus étroits et induisent un blocage cinétique. Ces phénomènes ne pourraient pas être révélés par une étude purement thermodynamique et montrent l'intérêt de tenir en compte de propriétés clés comme la cinétique ou la flexibilité. C'est pourquoi, il est maintenant crucial d'aller au-delà des méthodes de screening standard décrites dans la littérature et d'essayer de prendre en compte d'autres phénomènes physiques dans le screening. En considérant la flexibilité et les effets de transport on peut ainsi identifier des matériaux qui garderont leur performance lors de l'expérimentation.
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=0.95\textwidth]{figures/6-perspectives/KAXQIL_stretch.pdf}
+  \caption{ Visualization of the pore size stretching effect using the GrAED algorithm. The xenon increases the LCD value while diminishing the PLD value. }\label{fgr:stretch}
+\end{figure}
 
+Now that we identified two completely different diffusion behaviors, we can extrapolate these results to hypothetical conditions. For instance, if there is a relation between the quantity of xenon inside the pores and the structural similarity toward UQEFED, then the material could kinetically limit the adsorption of xenon at a high loading of xenon. In other words, it could be kinetically harder to adsorb xenon at higher xenon loadings. If we connect this conclusion to the one obtained on the adsroption process itself, the dsorption of xenon is also much more thermodynamically favorable at higher values of xenon loading. There seems to be a complexe thermodynamics-kinetics trade-off as we articulated in the previous chapter since KAXQIL and UQEFED are structurally quite similar, but it occurs at higher partial pressure in xenon. At an industrial point of view, the inclusion of transport effects in the analysis highlights additional cost in adsorbing xenon at high loading values, if this theoretical study is confirmed by experiments.
 
+By using simple simulation methods (Widom insertion and MD) on rigid structures, I probed the effects of flexibility on both the adsorption and transport properties using experimentally resolved structures in different adsorption conditions. This study sheds light on the mystery around the experiment-theory discrepancies and opens up opportunities to understand similar problematic systems. In this study, I relied on the experimental data that was published on the SBMOF structure, the same resources are not always available for other systems and maybe an effort of data generation using either experiments or simulations should be performed in these cases. If generalized, this approach can even be automatically applied on a series of structures, opening up the possibility of ``flexibility-aware'' screenings in the future. Aware of the importance of both flexibility and transport effects, other studies have tried to incorporate both in a small-scale screening process.\autocite{Stanton_2022} The authors used a flexible forcefield MD simulations to determine the diffusion coefficient and DFT calculations at the adsorption site to asses the adsorption performance. The main issue of this method is its computational cost, but it can be an alternative solution to the one introduced here, when no prior knowledge are available on the structures flexibility. 
 
 \section{Noble Gas Polarizability}
 
+The last but not least effect that could influence greatly the adsorption performances prediction is, of course the level of theory behind the interaction energy modelization. In most screening studies, we use (me included) very low-level classical theories to describe the guest--host interactions, because of the low computational cost associated to it. To improve the description, some studies focus on a few specific structures and use higher levels of theory such as DFT calculations. However, the prohibitive computational cost of these methods make it hard to deploy it in high-throughput screenings. 
+
+But first, we should identify the limits of molecular modeling in the current screening methodologies before exploring higher cost methods. This work is actually motivated by the recent advances in experimental design of nanoporous materials for Xe/Kr separation. The most selective materials are based on highly polar groups or exposed open-metal sites.\autocite{Li_2019,Pei_2022} The polarization is, therefore, central in these materials, but it is not well described by a simple Lennard-Jones potential especially when it is induced by high partial charge values (open-metal site or polar groups). 
+
+For this reason, it is necessary to develop a polarizable forcefield that include the effect of the surrounding partial charges into the guest--host interactions. The difference of polarizability between xenon and krypton could let new materials emerge. The best material ranking obtained by this type of screening would be completely different from the standard one. In this section, I will introduce the problem of current methodologies through an experiment-theory comparison, and then I will introduce possible methodologies that could be used to take into account the polarization in the currently ued Lennard-Jones potentials.
+
 \subsection{Problem definition}
 
-\todo{put graph comparing experiment and UFF}
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=0.7\textwidth]{figures/6-perspectives/exp_theory_discrepancies.pdf}
+  \caption{ Comparison between the selectivity values obtained experimentally and computationally. The structures are split in three categories depending on the difference between experiments and theory. We can explain the case of SBMOF-1 by its flexibility. The discreapncies for the materials in the lower right correspond to the ones introduced by Li et al. and Pei et al.,\autocite{Li_2019,Pei_2022} and the difference can be explained by the polarization that is not included in the level of theory considered. \todo{higher resolution+change xaxis (IAST)} }\label{fgr:exp_theory_discrepancy}
+\end{figure}
 
-The beginning of some explication
+If we consider the selectivity of good materials for xenon/krypton separation that are often presented in the literature, the materials named \ce{Co3(HCOO)6},\autocite{Wang_2014} CC3,\autocite{Chen_2014} SBMOF-2,\autocite{Chen_2015} CROFOUR-1-Ni,\autocite{Mohamed_2016}  SBMOF-1,\autocite{Banerjee_2016} \ce{Co3(C4O4)2(OH)2}\autocite{Li_2019} and ZJU-17a\autocite{Pei_2022} often appear as top separation materials.
+When comparing their selectivity values obtained by a Widom insertion with the UFF forcefield to the experimental values as shown on the Figure~\ref{fgr:exp_theory_discrepancy}, there is generally a good correlation, however, in some cases like SBMOF-1, other effects could explain the difference observed (see thr previous section on flexibility). In other cases, it is the polarization effect that was not taken into account and could in fact explain the difference. To better understand this phenomenon, I will describe the two papers that found record-breaking Xe/Kr selectivity values based on polar hydroxyl groups and open metal sites.
+
+The first paper of Li et al.\autocite{Li_2019} published in 2019 introduced a squarate-based MOF with a Xe/Kr selectivity of $69.7$ for a 20:80 binary mixture estimated by the ideal adsorbed solution theory (IAST)\autocite{Cessford_2012}. The authors explained this outstanding xenon affinity by two factors: a pore size close to the kinetic diameter of a xenon and the stabilization effect of the hydroxyl group. DFT calculations determined binding energies of the order of \SI{44.1}{\kJ\per\mole} for xenon and \SI{33.7}{\kJ\per\mole}, which suggests a separation process of enthalpic nature (usually the case for highly selective materials). Because of the high electronegativity of the oxygen atom, the hydroxyl group interacts strongly with the xenon through a permanent dipole--induced dipole interaction (introduced in the section~\ref{sct:interaction}). On the other hand, the pore wall creates unidimensional channels that present adsorption pores with a \SI{4.1}{\angstrom}$\times$\SI{4.3}{\angstrom} size, which is very close to the xenon kinetic diameter of about \SI{4.0}{\angstrom}. Finally if we look at the breakthrough experiment data, we observe a rather slow release of xenon in the mass transfer zone, which suggests a rather low xenon diffusion coefficient in this material.\todo{maybe compare to SBMOF-1 breakthrough curve} 
+
+\begin{figure}[ht]
+  \centering
+  \begin{subfigure}[b]{0.34\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/6-perspectives/jacs_li.jpg}
+    \caption{VESTA visualization\autocite{VESTA}}\label{fgr:jacs_li_str}
+  \end{subfigure}
+  \hfill
+  \begin{subfigure}[b]{0.34\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/6-perspectives/jacs_li_isotherm.jpg}
+    \caption{Adsorption isotherms}\label{fgr:jacs_li_isotherm}
+  \end{subfigure}
+  \hfill
+  \begin{subfigure}[b]{0.25\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{figures/6-perspectives/jacs_li_breakthrough.jpg}
+    \caption{Breakthrough curves}\label{fgr:jacs_li_breakthrough}
+  \end{subfigure}
+  \caption{ (a) Representation of the squarate-MOF \ce{Ce3(C4O4)2(OH)2} structure with the color code: brown for C, white for H, red for O, pink for Co. We can see the hydroxyl group to which the authors attribute the high Xe/Kr selectivity. (b) Mono-component adsorption isotherm measured experimentally for Xe, Kr, Ar, \ce{N2} and \ce{O2}. (c) Experimental breakthrough curves for a gas mixture with 400 ppm Xe and 40 ppm Kr balanced with dry air. }\label{fgr:jacs_li}
+\end{figure}
+
 
 Best materials use polarization effects \autocite{Li_2019,Pei_2022}
+
+\todo{Pei}
 
 Talk about the order of magnitude of the different interactions > charge--(induced dipole high magnitude)
 
 Standard methods failing to describe oms\autocite{Perry_2014} 
 
-\todo{faire référence à 2-thermo partie sur les interactions\ref{sct:interaction}}
-
-\subsubsection{Coupling with transport properties}
-
-% Outre l'exemple très parlant de SBMOF-1, d'autres publications, dans la séparation d'hydrocarbures notamment, s'intéressent aux éventuelles blocages cinétiques grâce à des simulations de dynamique moléculaire (MD) flexible.\cite{Stanton_2022} Ils ont notamment mis en évidence que la diffusion pouvait détériorer les performances de structure présentant d'excellente performance thermodynamique (énergie d'adsorption). Cette approche est très complète, car elle allie la thermodynamique, la flexibilité et les effets de transport dans une seule étude. En revanche, elle est très coûteuse en temps de calcul et ne pourrait être appliquée qu'à une poignée de structures. Au lieu d'utiliser des champs de force flexible qui alourdissent énormément la simulation, il est possible de se tourner vers une approche en ``snapshot'' bien moins coûteuse que nous développerons dans la dernière partie de ce rapport. Dans cette partie, nous nous focaliserons uniquement sur le couplage thermodynamique/cinétique.
 
 \subsection{Studying the polarization}
+
+
+\todo{faire référence à 2-thermo partie sur les interactions\ref{sct:interaction}}
 
 Inspired by works on the subject\autocite{Lachet_1998,Becker_2017} 
 
 \todo{essayer d'ajouter la polarisabilité pour PEI et al. et Li et al.}
 
-Xe/Kr difference of polarisability
+Xe/Kr difference of polarizability \SI{4.0}{\cubic\angstrom} \SI{2.5}{\cubic\angstrom}\autocite{Olney1997}
 Open Metal Sites/polar groups
 \todo{20220421\_pres}
 
